[package]
name = "rust-streamer"
version = "0.1.0"
authors = ["jprekz <jprekz@users.noreply.github.com>"]

[features]
default = []
graphic = ["piston_window"]

[dependencies]
cpal = "*"
num = "0.1"
rand = "0.4"

piston_window = { version = "0.70.0", optional = true }

[[example]]
name = "ex1"

[[example]]
name = "ex2"
required-features = ["graphic"]
